---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004 [*] Move import `pandas.DataFrame` out of type-checking block. Import is used for more than type hinting.
   --> quote.py:110:28
    |
109 |     if TYPE_CHECKING:
110 |         from pandas import DataFrame
    |                            ^^^^^^^^^
111 |
112 |     x: TypeAlias = DataFrame | None
    |                    --------- Used at runtime here
help: Move out of type-checking block
    |
  1 + from pandas import DataFrame
  2 | def f():
  3 |     from pandas import DataFrame
  …
110 |     if TYPE_CHECKING:
111 ~         pass
    |
note: This is an unsafe fix and may change runtime behavior
